spacing-correction

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,9 @@
     list-style-type: none;
     /* border: 1px solid red; */
 }
-
+html,body{
+    overflow-x: hidden;
+}
 .text-center {
     text-align: center;
 }
